# prompt-rubric-drift

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  release-python.yml
examples/after/: rubric.json  system.prompt
examples/before/: rubric.json  system.prompt
src/prompt_rubric_drift/: __init__.py  classifiers.py  cli.py  prompt_diff.py  report.py  rubric_diff.py
tests/: test_prompt_diff.py  test_rubric_diff.py
