[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-rubric-drift"
version = "0.1.0"
description = "Deterministic prompt and rubric drift detection for PR review."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "AuraOne", email = "opensource@auraone.ai" }]
keywords = ["prompt", "rubric", "drift", "evals", "github-action"]

[project.scripts]
prompt-rubric-drift = "prompt_rubric_drift.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

